# biosciences-mcp-edge

./: .env.example  CLAUDE.md  README.md  fastmcp.json  pyproject.toml
src/biosciences_mcp_edge/: __init__.py  server.py
src/biosciences_mcp_edge/clients/: biogrid_orcs.py  chembl_mechanism.py
src/biosciences_mcp_edge/models/: envelopes.py  mechanism.py  orcs.py
tests/: conftest.py
tests/integration/: test_mechanism_api.py  test_orcs_api.py
tests/unit/: test_mechanism_models.py  test_orcs_models.py
