[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biosciences-mcp-edge"
version = "0.1.0"
description = "Edge MCP tools for ORCS essentiality and ChEMBL mechanism-of-action"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/biosciences_mcp_edge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no network)",
    "integration: Integration tests (requires network and API keys)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pyright]
pythonVersion = "3.11"
